--- a/package.json
+++ b/package.json
@@ -1,28 +1,21 @@
 {
-  "name": "hello-blockstack",
-  "version": "0.0.0",
-  "description": "A simple Blockstack app",
-  "main": "index.js",
+  "name": "blockgpg",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "browserify": "browserify requires.js -o public/bundle.js",
-    "start": "npm run browserify; node server.js"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/blockstack/hello-blockstack.git"
-  },
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/blockstack/hello-blockstack/issues"
-  },
-  "homepage": "https://github.com/blockstack/hello-blockstack#readme",
   "devDependencies": {
-    "browserify": "^14.1.0",
     "express": "^4.15.2",
     "opn": "^4.0.2"
   },
   "dependencies": {
-    "blockstack": "^0.11.0"
+    "blockstack": "^0.11.0",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
+    "react-scripts": "1.0.17"
   }
 }
