--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,15 @@
 {
-  "name": "Hello, Blockstack",
-  "start_url": "localhost:5000",
-  "description": "A simple demo of Blockstack Auth",
-  "icons": [{
-    "src": "https://helloblockstack.com/icon-192x192.png",
-    "sizes": "192x192",
-    "type": "image/png"
-  }]
+  "short_name": "React App",
+  "name": "Create React App Sample",
+  "icons": [
+    {
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    }
+  ],
+  "start_url": "./index.html",
+  "display": "standalone",
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
