--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-app-rewired": "^1.3.5"
   },
   "dependencies": {
-    "blockstack": "^0.11.0",
+    "blockstack": "latest",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-scripts": "1.0.17"
